feat: add structure and config of tests and update documentation
